--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloth Store</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
 <body>
     <header>
         <!-- begining section -->
         <div class="start">
-            <div class="option-icon">&#8942</div>
+            <div class="option-icon"><i class="fa-solid fa-bars"></i></div>
             <div class="navlinks">
                 <nav class="links">
                     <a href="#">Home</a>
-                    <a href="#">Collection</a>
+                    <a href="#">Collections</a>
                     <a href="#">New</a>
                 </nav>
             </div>
@@ -28,16 +29,18 @@
         </div>
         <!-- ending section -->
         <div class="end">
-            <div>
-                first
+            <div class="heart">
+                <i class="fa-regular fa-heart"></i>
             </div>
-            <div>
-                <a href="#">Cart</a>
-                <a href="#">🛒</a>
+            <div class="cartcont">
+                <div class="cart">
+                    <a href="#" class="cart1">Cart</a>
+                </div>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
 
-            <div>
-                profile
+            <div class="profile">
+                <i class="fa-solid fa-user"></i>
             </div>
         </div>
     </header>
@@ -51,8 +54,8 @@
                     <a href="#">WOMEN</a>
                     <a href="#">KIDS</a>
                 </div>
-                <div>
-                    <input type="search" name="" placeholder="search" id="">
+                <div class="inputcont">
+                    <input type="search" name="" placeholder="search" id=""><i class="fa fa-search"></i>
                 </div>
             </div>
          </section>
@@ -69,7 +72,8 @@
                     </div>
                     <div class="shop">
                         <div class="shop1">
-                            <a href="#">Go To Shop</a>
+                            <a href="#">Go To Shop </a>
+                            <i class="fa-solid fa-arrow-right"></i>
                         </div>
                         <div class="shop2">
                             <a href="#" class="a1"><</a>
