--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                      </div>
                  </div>    
                 <div class="img">
-                    <div>
-                        <img src="images/IMG_9366.JPEG" alt="" width="450px" height="400px">
+                    <div class="imageBox">
+                        <img src="images/IMG_9366.JPEG" alt="" >
                     </div>
-                    <div>
-                        <img src="images/IMG_9367.JPEG" alt="" width="450px" height="400px">
+                    <div class="imageBox">
+                        <img src="images/IMG_9367.JPEG" alt="">
                     </div>
                 </div>
             </div>
