made a few changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- begining section -->
         <div class="start">
-            <div class="option-icon"><i class="fa-solid fa-bars"></i></div>
+            <div class="option-icon"><img src="images/Group 36.svg" alt=""></div>
             <div class="navlinks">
                 <nav class="links">
                     <a href="#">Home</a>
@@ -29,14 +29,14 @@
         </div>
         <!-- ending section -->
         <div class="end">
+
             <div class="heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
+
             <div class="cartcont">
-                <div class="cart">
                     <a href="#" class="cart1">Cart</a>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="#" class="shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
 
             <div class="profile">
@@ -54,8 +54,9 @@
                     <a href="#">WOMEN</a>
                     <a href="#">KIDS</a>
                 </div>
-                <div class="inputcont">
-                    <input type="search" name="" placeholder="search" id=""><i class="fa fa-search"></i>
+                <div class="inputCont">
+                    <input type="search" name="" placeholder="search" id="">
+                    <i class="fa fa-search"></i>
                 </div>
             </div>
          </section>
@@ -73,11 +74,12 @@
                     <div class="shop">
                         <div class="shop1">
                             <a href="#">Go To Shop </a>
-                            <i class="fa-solid fa-arrow-right"></i>
+                            <img src="images/Vector.svg" alt="" class="arrow">
+                            <!-- <i class="fa-solid fa-arrow-right"></i> -->
                         </div>
                         <div class="shop2">
-                            <a href="#" class="a1"><</a>
-                            <a href="#" class="a2">></a>
+                            <div class="a1"><img src="images/arrr.svg" alt="" ></div>
+                            <div class="a2"><img src="images/arr.svg" alt=""></div>
                         </div>
                      </div>
                  </div>    
