media queries half done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="pageContainer">
     <header>
         <!-- begining section -->
         <div class="start">
@@ -23,8 +24,8 @@
         </div>
         <!-- middle section -->
         <div class="middle">
-            <div>
-                <img src="images/IMG_9370.PNG" alt="">
+            <div class="middleImage">
+                <img src="images/Group 53.svg" alt="">
             </div>
         </div>
         <!-- ending section -->
@@ -65,7 +66,7 @@
           <section>
             <div class="boxx">
                 <div class="box-2">
-                    <div>
+                    <div class="textBox">
                         <h1>NEW</h1>
                         <h1>COLLECTION</h1>
                         <p>Summer</p>
@@ -94,5 +95,6 @@
             </div>
           </section>
     </main>
+</div>
 </body>
 </html>
