finished media queries

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloth Store</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
@@ -34,7 +34,6 @@
             <div class="heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
-
             <div class="cartcont">
                     <a href="#" class="cart1">Cart</a>
                 <a href="#" class="shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -92,6 +91,38 @@
                         <img src="images/IMG_9367.JPEG" alt="">
                     </div>
                 </div>
+            </div>
+
+            <!-- third sectiom= for mobile phones -->
+             <div class="mobileView">
+                <div class="img1">
+                    <div class="imageBox">
+                        <img src="images/IMG_9366.JPEG" alt="">
+                    </div>
+                    <div class="text">
+                        <p>Cotton T Shirt</p>
+                    </div>
+                    <div class="itemInfo">
+                        <p>Full Sleeve Zipper</p>
+                        <p>$195</p>
+                    </div>
+                </div>
+                <div class="img2">
+                     <div class="imageBox">
+                        <img src="images/IMG_9367.JPEG" alt="">
+                    </div>
+                    <div class="text">
+                        <p>Cotton T Shirt</p>
+                    </div>
+                    <div class="itemInfo">
+                        <p>Full Sleeve Zipper</p>
+                        <p>$195</p>
+                    </div>
+                </div>
+             </div>
+             <div class="shop3">
+                <a href="#">Go To Shop </a>
+                <img src="images/Vector.svg" alt="" class="arrow">
             </div>
           </section>
     </main>
